css: Fix rendering of whitespace placeholder
Fixes #8348

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -285,6 +285,7 @@ textarea#id_check_flags {
 .space-space::before {
   content: "·";
   position: relative;
+  left: 25%;
 }
 
 ins,
